add final video

--- a/config/content.htm
+++ b/config/content.htm
@@ -464,6 +464,13 @@
 <p>手足球零件格式說明</p>
 <h4>零件 BOM</h4>
 <p>手足球零組件材料表 (含零組件下載連結)</p>
+<p><a href="https://cad.onshape.com/documents/e2d73c178693cf0ad0bc31ca/w/906d408a6912d36ffb4e57db/e/932b8a1334f80a90eae3c0b4">零組件下載連結</a></p>
+<p><a href="https://cad.onshape.com/documents/5f4e54ca644215864b3096b7/w/f4472a3fddbafc5034805db4/e/a5ff3a6ec4d5c36e8320decb">足球員與桿子材料表</a> (40623232)</p>
+<p><img alt="" height="731" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/45445.png" width="950"/></p>
+<p></p>
+<p><a href="https://cad.onshape.com/documents/00055da765360e46618e7e73/w/97743729bfbd49c52ab25691/e/79c1209ac71dae3ad483c53c">檯子材料表</a>(40623232)</p>
+<p><img alt="" height="731" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/542441.png" width="950"/></p>
+<h4></h4>
 <h4>零件尺寸圖</h4>
 <p>零件尺寸圖</p>
 <p><a href="https://cad.onshape.com/documents/546fe57d499b465ceaf24f25/w/4fc5b300cca92f64f2197bd7/e/86c5a39e870920cf48e32e06">桿子&amp;足球員零件尺寸</a><span>  (40623232)<img caption="false" height="658" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/POLE%20PLAYER.png" width="950"/></span></p>
@@ -477,8 +484,7 @@
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
-<h1>V-rep 動態模擬</h1>
+<p>3D 零組件爆炸圖</p><h1>V-rep 動態模擬</h1>
 <h2>送球機構設計與模擬</h2>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
@@ -867,8 +873,10 @@ end
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_wRHtEhC5MI">40623201 王君庭結案口頭簡報</a></span></p>
 <p><a href="https://www.youtube.com/watch?v=K63U3U_98Mk&amp;t=3s">40623217 楊傅博結案口頭簡報</a></p>
+<p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p>
+<p><a href="https://youtu.be/qdDvOBMB6Jc">40623232 余建杰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=-Ix7WbmB5Jw">40623244 林俊鎧結案口頭簡報</a></p>
-<p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p><h2>專案報告書</h2>
+<p></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
 <hr/>
