modify final video

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -468,8 +468,7 @@
 <p><a href="https://cad.onshape.com/documents/5f4e54ca644215864b3096b7/w/f4472a3fddbafc5034805db4/e/a5ff3a6ec4d5c36e8320decb">足球員與桿子材料表</a> (40623232)</p>
 <p><img alt="" height="731" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/45445.png" width="950"/></p>
 <p></p>
-<p></p>
-<p><a href="https://cad.onshape.com/documents/00055da765360e46618e7e73/w/97743729bfbd49c52ab25691/e/79c1209ac71dae3ad483c53c">檯子材料表</a></p>
+<p><a href="https://cad.onshape.com/documents/00055da765360e46618e7e73/w/97743729bfbd49c52ab25691/e/79c1209ac71dae3ad483c53c">檯子材料表</a>(40623232)</p>
 <p><img alt="" height="731" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/542441.png" width="950"/></p>
 <h4></h4>
 <h4>零件尺寸圖</h4>
