--- a/content/細部設計與 BOM.html
+++ b/content/細部設計與 BOM.html
@@ -287,6 +287,13 @@ img {
 <p>手足球零件格式說明</p>
 <h4>零件 BOM</h4>
 <p>手足球零組件材料表 (含零組件下載連結)</p>
+<p><a href="https://cad.onshape.com/documents/e2d73c178693cf0ad0bc31ca/w/906d408a6912d36ffb4e57db/e/932b8a1334f80a90eae3c0b4">零組件下載連結</a></p>
+<p><a href="https://cad.onshape.com/documents/5f4e54ca644215864b3096b7/w/f4472a3fddbafc5034805db4/e/a5ff3a6ec4d5c36e8320decb">足球員與桿子材料表</a> (40623232)</p>
+<p><img alt="" height="731" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/45445.png" width="950"/></p>
+<p></p>
+<p><a href="https://cad.onshape.com/documents/00055da765360e46618e7e73/w/97743729bfbd49c52ab25691/e/79c1209ac71dae3ad483c53c">檯子材料表</a>(40623232)</p>
+<p><img alt="" height="731" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/542441.png" width="950"/></p>
+<h4></h4>
 <h4>零件尺寸圖</h4>
 <p>零件尺寸圖</p>
 <p><a href="https://cad.onshape.com/documents/546fe57d499b465ceaf24f25/w/4fc5b300cca92f64f2197bd7/e/86c5a39e870920cf48e32e06">桿子&amp;足球員零件尺寸</a><span>  (40623232)<img caption="false" height="658" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/POLE%20PLAYER.png" width="950"/></span></p>
@@ -300,8 +307,7 @@ img {
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
-<br />參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬</div>
+<p>3D 零組件爆炸圖</p><br />參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬</div>
         
     <!-- footer -->
       <div class="container">
