--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -157,7 +157,9 @@ img {
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
+<p><a href="https://www.youtube.com/watch?v=thRieR1paRw&amp;feature=youtu.be">40623220 蔡崇廷結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=UKmK8mvFx0E">40623236 黃子峰結案口頭簡報</a></p>
+<p></p>
 <p></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
