--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -626,8 +626,7 @@
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p>
-<h2>系統功能展示</h2>
+<p></p><h2>系統功能展示</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <hr/>
