add 40623242 final report & edit bg5 human and human explain

--- a/config/content.htm
+++ b/config/content.htm
@@ -837,7 +837,7 @@ end
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/Object%20setting%20step.html">物件設定步驟</a>(40623217)</p>
-<p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20human.html">人對人程式解說</a>(40623217) </p>
+<p><a href="https://mdecadp2018.github.io/site-40623242/content/human%20and%20human.html">人對人程式解說</a>(40623242) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20computer.html">人對電腦程式解說</a>(40623217) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/computer%20and%20computer.html">電腦對電腦程式解說</a>(40623217) </p>
 <p>人對人(40623242)</p>
@@ -850,8 +850,7 @@ end
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
-<h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -875,6 +874,7 @@ end
 <p><a href="https://www.youtube.com/watch?v=K63U3U_98Mk&amp;t=3s">40623217 楊傅博結案口頭簡報</a></p>
 <p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p>
 <p><a href="https://youtu.be/qdDvOBMB6Jc">40623232 余建杰結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=rrXvw2TMdZ4">40623242 高宇辰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=-Ix7WbmB5Jw">40623244 林俊鎧結案口頭簡報</a></p>
 <p></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
