--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -175,6 +175,7 @@ img {
 <p><a href="https://www.youtube.com/watch?v=K63U3U_98Mk&amp;t=3s">40623217 楊傅博結案口頭簡報</a></p>
 <p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p>
 <p><a href="https://youtu.be/qdDvOBMB6Jc">40623232 余建杰結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=rrXvw2TMdZ4">40623242 高宇辰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=-Ix7WbmB5Jw">40623244 林俊鎧結案口頭簡報</a></p>
 <p></p><br />結案報告 << <a href='結案報告.html'>Previous</a> <a href='專案報告書.html'>Next</a> >> 專案報告書</div>
         
