--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -862,6 +862,7 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -874,6 +875,7 @@ end
 <p><a href="https://www.youtube.com/watch?v=K63U3U_98Mk&amp;t=3s">40623217 楊傅博結案口頭簡報</a></p>
 <p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p>
 <p><a href="https://youtu.be/qdDvOBMB6Jc">40623232 余建杰結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=rrXvw2TMdZ4">40623242 高宇辰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=-Ix7WbmB5Jw">40623244 林俊鎧結案口頭簡報</a></p>
 <p></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
