--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -363,7 +363,7 @@ end
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/Object%20setting%20step.html">物件設定步驟</a>(40623217)</p>
-<p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20human.html">人對人程式解說</a>(40623217) </p>
+<p><a href="https://mdecadp2018.github.io/site-40623242/content/human%20and%20human.html">人對人程式解說</a>(40623242) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20computer.html">人對電腦程式解說</a>(40623217) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/computer%20and%20computer.html">電腦對電腦程式解說</a>(40623217) </p>
 <p>人對人(40623242)</p>
@@ -376,8 +376,7 @@ end
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
-<br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='結案報告.html'>Next</a> >> 結案報告</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='結案報告.html'>Next</a> >> 結案報告</div>
         
     <!-- footer -->
       <div class="container">
