--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -177,13 +177,85 @@
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>專案成果摘要</p>
+<p><span>手足球是由一個英國名為哈羅德的人發明，這個靈感的來自火柴盒，目的是將所以基本足球運動的概念能夠在一個盒子之中表現出來。</span></p>
+<p><span>而至今手足球已變成老少咸宜的桌上型運動，相對足球來說</span><span>某些事情在手足球裡被叫為”unraceable”，因為其操作是可以達到非常快速的，也是因為這個原因瘋迷了全球的玩家!</span></p>
 <p>專案執行動機</p>
+<p>本次的專案目的為，組織一個十人的團隊，利用"協同"的方式設計出個"可程式控制"的手足球機構，過程中會出現很多的衝突，但也必須藉由溝通來化解所有的問題，唯有不斷的嘗試和修正才能做出最完美的機構，希望透過這次的專案執行讓我們真正體會到"協同"的精隨!!</p>
 <p>相關文獻探討</p>
 <p>專案執行成員</p>
+<table border="2">
+<tbody>
+<tr>
+<td><strong>Leader</strong></td>
+<td>
+<pre class="tw-data-text tw-ta tw-text-large" data-placeholder="翻譯" dir="ltr" id="tw-target-text"><strong><span lang="en">Assignments</span></strong></pre>
+</td>
+</tr>
+<tr>
+<td><span>40423207 朱修林</span></td>
+<td>組織專案執行<span>、參數設計與繪圖</span></td>
+</tr>
+<tr>
+<td><strong>Member</strong></td>
+<td>
+<pre class="tw-data-text tw-ta tw-text-large" data-placeholder="翻譯" dir="ltr" id="tw-target-text"><strong><span lang="en">Assignments</span></strong></pre>
+</td>
+</tr>
+<tr>
+<td><span>40423160 許育誠</span></td>
+<td><span>送球機構設計模擬、V-rep手足球機構模擬</span><br/><span></span></td>
+</tr>
+<tr>
+<td><span>40423131 許承恩</span></td>
+<td><br/><span></span></td>
+</tr>
+<tr>
+<td><span>40623207 呂沛蓉</span></td>
+<td><span>細部設計 Bom 表</span><br/><span></span></td>
+</tr>
+<tr>
+<td><span>40623218 姚浚洧</span></td>
+<td></td>
+</tr>
+<tr>
+<td><span>40623219   蘇昱</span></td>
+<td><br/><span></span></td>
+</tr>
+<tr>
+<td><span>40623231 周駿麟</span></td>
+<td><span>送球機構設計模擬</span></td>
+</tr>
+<tr>
+<td><span>40623237 黃博隆</span></td>
+<td><span>V-rep手足球機構模擬</span></td>
+</tr>
+<tr>
+<td><span>40623241 郭祐齊</span></td>
+<td>
+<p><span>零組件尺寸分析、專</span><span>案報告書、更新網誌</span></p>
+</td>
+</tr>
+<tr>
+<td><span>40623246 劉柏瑞</span></td>
+<td><span>送球機構設計模擬、更新網誌</span></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 <p>執行使用套件</p>
+<p>onshape <span>、V-rep、Github</span></p>
 <p>專案執行過程規劃</p>
+<p>分配工作→概略規劃→開始各自完成任務→問題討論→2D構想完成→V-rep模擬→實體化→完成專案</p>
 <p>專案執行內容</p>
+<p>手足球模擬</p>
 <p>專案結論</p>
+<p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs">人對人-1</a></p>
+<p><a href="https://www.youtube.com/watch?v=I19GK0fYO_E">人對人-2</a></p>
+<p><a href="https://www.youtube.com/watch?v=OAVXWbMAh4I">人對電腦</a></p>
+<p><a href="https://www.youtube.com/watch?v=qP5MVSiju8U">電腦對電腦</a></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>專案成果摘要</p>
@@ -203,8 +275,7 @@
 <p>執行使用套件</p>
 <p>專案執行過程規劃</p>
 <p>專案執行內容</p>
-<p>專案結論</p>
-<h1>設計與繪圖</h1>
+<p>專案結論</p><h1>設計與繪圖</h1>
 <h2>零組件尺寸分析</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
@@ -214,14 +285,26 @@
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
+<p><span>分析(一) ☛球員與球</span></p>
 <p><span>零件尺寸分析過程如下：(40623241)</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-6c_uwg_R7s" width="560"></iframe></span></p>
 <p><span>讓兩足球員呈現平行狀態時不會出現干涉，可以踢的到球且不會卡到地版</span></p>
 <p><img alt="" height="553" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-05-17_15-55-45.png" width="700"/></p>
 <p>原圖手足球座的長為1422mm，若有八根桿子操控踢球員</p>
-<p>126*8= 1008</p>
-<p>1422-1008 = 414</p>
-<p>守門員後面各有20mm的空間運用，所以尺寸分析算是得宜</p>
+<p>126*7= 882</p>
+<p>1422-882 = 540</p>
+<p>守門員後面各有2.7cm的空間運用，所以尺寸分析算是得宜</p>
+<p><span>分析(二)  </span><span>☛球台四周</span></p>
+<p><span>過程影片如下</span></p>
+<p><span><span><a href="https://www.youtube.com/watch?v=Lnd2HEH--hc&amp;t=7s">https://www.youtube.com/watch?v=Lnd2HEH--hc&amp;t=7s</a></span></span></p>
+<p><span><span>在球桌的四周加上圓弧角，以改善守門員踢不到兩側的狀況</span></span></p>
+<p><span><img caption="false" height="387" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-05-31_14-16-55.png" width="750"/></span></p>
+<p><img caption="false" height="633" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-05-31_14-17-53.png" width="750"/></p>
+<p><span>分析(三)  ☛球員與彈簧</span></p>
+<p><span>問題 : 當球在球台的最邊緣時，是否會因為彈簧的長度而導致球員無法踢到球，甚至直接從洞口溜過去?(如下圖)</span></p>
+<p><span color="#000000">分析過程 :<a href="https://www.youtube.com/watch?v=RNMicDsQor0">https://www.youtube.com/watch?v=RNMicDsQor0</a></span></p>
+<p><span color="#000000">結果 :  建議讓彈簧軸向的程度調為6.8~7mm最為合適</span></p>
+<p><span color="#000000"><img alt="" height="307" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-06-09_10-01-43.png" width="391"/></span></p>
 <p><span></span></p>
 <p><span></span></p>
 <hr/>
@@ -236,8 +319,7 @@
 <p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
 <p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
-<p></p>
-<h2>參數設計與繪圖</h2>
+<p></p><h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
@@ -783,6 +865,8 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p><span>手足球系統模擬-人對人(40623237)</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
@@ -837,7 +921,7 @@ end
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/Object%20setting%20step.html">物件設定步驟</a>(40623217)</p>
-<p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20human.html">人對人程式解說</a>(40623217) </p>
+<p><a href="https://mdecadp2018.github.io/site-40623242/content/human%20and%20human.html">人對人程式解說</a>(40623242) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20computer.html">人對電腦程式解說</a>(40623217) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/computer%20and%20computer.html">電腦對電腦程式解說</a>(40623217) </p>
 <p>人對人(40623242)</p>
@@ -850,8 +934,7 @@ end
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
-<h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -863,6 +946,8 @@ end
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
+<p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
+<p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -886,6 +971,7 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
+<p><a href="https://mdecadp2018.github.io/site-40623241/downloads/report.pdf" target="_blank">BG3專案結案報告</a></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
