--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -309,6 +309,14 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對人(40423160)</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
+<p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對電腦<span>(40423160)</span></yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OAVXWbMAh4I" width="560"></iframe></p>
+<p><span>手足球系統模擬-</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">電腦對電腦<span>(40423160)</span></yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
+<p><span>手足球系統模擬-人對人(40623237)</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
