--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -783,7 +783,7 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">40623237手足球人與人模擬</a></p>
+<p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">手足球人與人模擬(40623237)</a></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
@@ -838,7 +838,7 @@ end
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/Object%20setting%20step.html">物件設定步驟</a>(40623217)</p>
-<p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20human.html">人對人程式解說</a>(40623217) </p>
+<p><a href="https://mdecadp2018.github.io/site-40623242/content/human%20and%20human.html">人對人程式解說</a>(40623242) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20computer.html">人對電腦程式解說</a>(40623217) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/computer%20and%20computer.html">電腦對電腦程式解說</a>(40623217) </p>
 <p>人對人(40623242)</p>
@@ -851,8 +851,7 @@ end
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
-<h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -863,11 +862,11 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 =======
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
->>>>>>> scrum-1/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
