add bg4 final film

--- a/config/content.htm
+++ b/config/content.htm
@@ -564,7 +564,7 @@
 <p><span><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%9C%80%E7%B5%82%E7%89%88(%E6%9B%B4%E6%94%B9%E6%A9%9F%E6%A7%8B).png" width="700"/></span></p>
 <hr/>
 <p><span><span>第三版<span>送球機構模擬(Final version)(40623239):</span></span></span></p>
-<p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/1Uy3w4vkDU2PcOFU54JC0du_9sBudBzIU/view" target="_blank">送球機構第三版</a></span></span></span></p>
+<p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/1Uy3w4vkDU2PcOFU54JC0du_9sBudBzIU/view">送球機構第三版</a></span></span></span></p>
 <p><span><span><span>已成功完成送球部分</span></span></span></p>
 <p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rjQ5rFQhfuM" width="500"></iframe></span></span></span></p>
 <hr/>
@@ -880,6 +880,7 @@ end
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://youtu.be/I-U-JlEgs5M">40623239 許登貴結案口頭簡報</a></span></p>
 <p><a href="https://www.youtube.com/watch?v=hSHOce4l9pE&amp;feature=youtu.be">40423158 莊子慶結案口頭簡報</a></p>
+<p><a href="https://youtu.be/58hZPcfdCI8">40623227 張耀元結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
