--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -208,6 +208,12 @@
 <h2>零組件尺寸分析</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
+<p><span style="font-size: larger; font-family: dfkai-sb;">針對手足球人偶跟手足球之間的干涉情形做出配合圖。</span></p>
+<p><img alt="" height="397" src="/images/WINWORD_n3tcUkvd37.png" width="500"/><img alt="" height="396" src="/images/WINWORD_n3tcUkvd37.png" width="500"/></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;">手足球人偶工作圖</span></p>
+<p><img alt="" height="355" src="/images/chrome_pKykomnNUM.png" width="500"/><img alt="" height="355" src="/images/chrome_pKykomnNUM.png" width="500"/></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;">手足球桌工作圖</span></p>
+<p><img alt="" height="355" src="/images/chrome_farFaSQEfb.png" width="500"/><img alt="" height="355" src="/images/chrome_farFaSQEfb.png" width="500"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
@@ -236,8 +242,7 @@
 <p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
 <p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
-<p></p>
-<h2>參數設計與繪圖</h2>
+<p></p><h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
@@ -423,19 +428,19 @@
 <hr/>
 <p><span><img alt="" height="461" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E5%A5%97%E7%92%B0.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/79050e73f6fdafdf75603c1c">手足球握把擋塊</a>工程圖 Final version<span> - 40623224)</span></span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="491" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/9b2da6688d3c638d13886d84">送球機構足球檯桌角</a></span><span>工程圖Final version</span><span>- 40623224)</span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="496" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/2a55ab3dd15a793d7f3c333f">送球機構</a>工程圖Final version</span><span> - 40623224)</span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="497" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B-%E8%9E%BA%E6%97%8B%E6%A1%BF.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/301863d8613e4f2cc0d7805c">送球機構-螺旋桿</a>工程圖Final version<span> - 40623224)</span></span></p>
 <h4>零件部分組裝圖</h4>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">零組件零件部分組裝圖展示過程(Final version <span>- 40623224</span><span>)</span></yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qHQmoM1uQS4" width="500"></iframe></p>
-<hr/>
+<hr>
 <p><img alt="" height="492" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFA%E7%B5%84%E5%90%88.png" width="700"/></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/e8921a0f64a3db51c8790bf4">手足球桿A組合</a>Final version<span> - 40623224</span>)</span></p>
 <hr/>
@@ -837,7 +842,7 @@ end
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/Object%20setting%20step.html">物件設定步驟</a>(40623217)</p>
-<p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20human.html">人對人程式解說</a>(40623217) </p>
+<p><a href="https://mdecadp2018.github.io/site-40623242/content/human%20and%20human.html">人對人程式解說</a>(40623242) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20computer.html">人對電腦程式解說</a>(40623217) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/computer%20and%20computer.html">電腦對電腦程式解說</a>(40623217) </p>
 <p>人對人(40623242)</p>
@@ -850,8 +855,7 @@ end
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
-<h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -893,4 +897,4 @@ end
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
