--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -209,11 +209,11 @@
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">針對手足球人偶跟手足球之間的干涉情形做出配合圖。</span></p>
-<p><img alt="" height="397" src="/images/WINWORD_n3tcUkvd37.png" width="500"/><img alt="" height="396" src="/images/WINWORD_n3tcUkvd37.png" width="500"/></p>
+<p><img alt="" height="396" src="/images/WINWORD_n3tcUkvd37.png" width="500"/></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球人偶工作圖</span></p>
-<p><img alt="" height="355" src="/images/chrome_pKykomnNUM.png" width="500"/><img alt="" height="355" src="/images/chrome_pKykomnNUM.png" width="500"/></p>
+<p><img alt="" height="355" src="/images/chrome_pKykomnNUM.png" width="500"/></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球桌工作圖</span></p>
-<p><img alt="" height="355" src="/images/chrome_farFaSQEfb.png" width="500"/><img alt="" height="355" src="/images/chrome_farFaSQEfb.png" width="500"/></p>
+<p><img alt="" height="355" src="/images/chrome_farFaSQEfb.png" width="500"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
@@ -436,19 +436,19 @@
 <hr/>
 <p><span><img alt="" height="461" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E5%A5%97%E7%92%B0.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/79050e73f6fdafdf75603c1c">手足球握把擋塊</a>工程圖 Final version<span> - 40623224)</span></span></p>
-<hr>
+<hr/>
 <p><span><img alt="" height="491" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/9b2da6688d3c638d13886d84">送球機構足球檯桌角</a></span><span>工程圖Final version</span><span>- 40623224)</span></p>
-<hr>
+<hr/>
 <p><span><img alt="" height="496" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/2a55ab3dd15a793d7f3c333f">送球機構</a>工程圖Final version</span><span> - 40623224)</span></p>
-<hr>
+<hr/>
 <p><span><img alt="" height="497" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B-%E8%9E%BA%E6%97%8B%E6%A1%BF.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/301863d8613e4f2cc0d7805c">送球機構-螺旋桿</a>工程圖Final version<span> - 40623224)</span></span></p>
 <h4>零件部分組裝圖</h4>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">零組件零件部分組裝圖展示過程(Final version <span>- 40623224</span><span>)</span></yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qHQmoM1uQS4" width="500"></iframe></p>
-<hr>
+<hr/>
 <p><img alt="" height="492" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFA%E7%B5%84%E5%90%88.png" width="700"/></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/e8921a0f64a3db51c8790bf4">手足球桿A組合</a>Final version<span> - 40623224</span>)</span></p>
 <hr/>
@@ -569,7 +569,7 @@
 <p><span><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%9C%80%E7%B5%82%E7%89%88(%E6%9B%B4%E6%94%B9%E6%A9%9F%E6%A7%8B).png" width="700"/></span></p>
 <hr/>
 <p><span><span>第三版<span>送球機構模擬(Final version)(40623239):</span></span></span></p>
-<p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/1Uy3w4vkDU2PcOFU54JC0du_9sBudBzIU/view" target="_blank">送球機構第三版</a></span></span></span></p>
+<p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/1Uy3w4vkDU2PcOFU54JC0du_9sBudBzIU/view">送球機構第三版</a></span></span></span></p>
 <p><span><span><span>已成功完成送球部分</span></span></span></p>
 <p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rjQ5rFQhfuM" width="500"></iframe></span></span></span></p>
 <hr/>
@@ -911,4 +911,4 @@ end
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p></hr></hr></hr></hr>
+<p><span></span></p>
