--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -156,11 +156,11 @@ img {
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">針對手足球人偶跟手足球之間的干涉情形做出配合圖。</span></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/WINWORD_n3tcUkvd37.png">圖片連結</a></span></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;"><img alt="" height="494" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/WINWORD_n3tcUkvd37.png" width="623"/></span></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球人偶工作圖</span></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/chrome_pKykomnNUM.png">圖片連結</a></span></p>
+<p><img alt="" height="390" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/chrome_pKykomnNUM.png" width="550"/></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球桌工作圖</span></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/chrome_farFaSQEfb.png">圖片連結</a></span></p>
+<p><img alt="" height="390" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/chrome_farFaSQEfb.png" width="549"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
