--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -209,11 +209,12 @@
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">針對手足球人偶跟手足球之間的干涉情形做出配合圖。</span></p>
-<p><img alt="" height="396" src="/images/WINWORD_n3tcUkvd37.png" width="500"/></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;"><img alt="" height="494" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/WINWORD_n3tcUkvd37.png" width="623"/></span></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/WINWORD_n3tcUkvd37.png">圖片連結</a></span></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球人偶工作圖</span></p>
-<p><img alt="" height="355" src="/images/chrome_pKykomnNUM.png" width="500"/></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/chrome_pKykomnNUM.png">圖片連結</a></span></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球桌工作圖</span></p>
-<p><img alt="" height="355" src="/images/chrome_farFaSQEfb.png" width="500"/></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/chrome_farFaSQEfb.png">圖片連結</a></span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
@@ -558,21 +559,21 @@
 <p><span>第二版</span><span>送球機構設計(有圓盤)(40623224):</span></p>
 <p>第二版更改的內容有把滾道的縫隙填滿，並且再螺旋桿內下方增加一圓盤。</p>
 <p><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%BA%8C%E7%89%88(%E6%9C%89%E5%9C%93%E7%9B%A4).png" width="700"/></p>
-<hr/>
+<hr>
 <p><span>第二版<span>送球機構模擬(有圓盤)(40623227):</span></span></p>
 <p><span><span>下載連結:<a href="https://drive.google.com/file/d/1XO_sugfiKOFQxGzpXwbu8HAWhsiXNC7n/view?usp=sharing">送球機構第二版</a></span></span></p>
 <p><span><span>雖成功進入可是無法傳送上去</span></span></p>
 <p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JmMV0KGnqQI" width="500"></iframe></span></span></p>
-<hr/>
+<hr>
 <p><span>第三版</span><span>送球機構設計(Final version)(40623224):</span></p>
 <p><span>Final version更改的內容是圓柱體的部分，由於上一版無法使球滾至上方，後來設計120度的槽，使球進入圓柱體內會隨著螺旋桿滾動而慢慢向上。</span></p>
 <p><span><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%9C%80%E7%B5%82%E7%89%88(%E6%9B%B4%E6%94%B9%E6%A9%9F%E6%A7%8B).png" width="700"/></span></p>
-<hr/>
+<hr>
 <p><span><span>第三版<span>送球機構模擬(Final version)(40623239):</span></span></span></p>
 <p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/1Uy3w4vkDU2PcOFU54JC0du_9sBudBzIU/view">送球機構第三版</a></span></span></span></p>
 <p><span><span><span>已成功完成送球部分</span></span></span></p>
 <p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rjQ5rFQhfuM" width="500"></iframe></span></span></span></p>
-<hr/>
+<hr>
 <h4><strong>BG5</strong></h4>
 <p>成品 : (40623248)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/__0Ib9cTzrA" width="560"></iframe></p>
@@ -911,4 +912,4 @@ end
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
