--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -210,7 +210,11 @@
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
-<p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
+<p><span>手足球系統的零組件尺寸分析 (可行性分析) (40623215)</span></p>
+<p><img caption="false" height="293" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E6%B4%9E.PNG" width="500"/></p>
+<p><span>傾斜球檯，最中間為最低點，球在進洞後會滾回中心點，成為一個自動回球機構。</span></p>
+<p><img alt="" height="277" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E7%B8%AB%E7%B7%9A.PNG" width="500"/></p>
+<p><span>連同球桿改動，路徑改為和傾斜後的球檯平行，故不會有因球檯傾斜而球員踢不到球的情形。</span></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
@@ -236,8 +240,7 @@
 <p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
 <p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
-<p></p>
-<h2>參數設計與繪圖</h2>
+<p></p><h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
@@ -338,13 +341,13 @@
 <h4>零件尺寸圖</h4>
 <p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/d8734d77d2aa524b961cc1dc">零件 放球檯 和放球裝支架</a>   40623245<img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-02.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/8b4fbdf95f0f887de918ecf0">零件 送球機構用電圈 放球檯用滑塊 送球檯底部固定槽</a> 40623245</p>
-<p><img alt="" height="768" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-19.png" width="1367"/></p>
+<p><img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-19.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/76833e18618be1c72bc2f875">零件 送球檯用滑塊 送球檯用止推滑塊</a> 40623245</p>
 <p><img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-33.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/e3cf1a9fa9d929307db3b5b0">零件 洗球用管路一 送球機構外盒</a> 40623245</p>
 <p><img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-48.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/460154e29001c5a6945b03ea">零件 滑塊與送球機構用軸 支架用軸</a> 40623245</p>
-<p><img alt="" height="768" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-06-03.png" width="1367"/></p>
+<p><img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-06-03.png" width="800"/></p>
 <h4>零件部分組裝圖</h4>
 <p><img caption="false" height="402" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/part.png" width="700"/></p>
 <p>所有桿子的組合 40623206</p>
@@ -863,24 +866,25 @@ end
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<hr/>
+<hr>
 <h4><strong>BG2</strong></h4>
-<p><a href="https://www.youtube.com/watch?v=UKmK8mvFx0E">40623236 黃子峰結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p></p>
-<hr/>
+<hr>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+<p><a href="https://www.youtube.com/watch?v=evHq1EF35Yk&amp;feature=youtu.be">40623231周駿麟專案口頭報告</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
-=======
+<p></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master
-<hr/>
+<p></p>
+<hr>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://youtu.be/I-U-JlEgs5M">40623239 許登貴結案口頭簡報</a></span></p>
 <p><a href="https://www.youtube.com/watch?v=hSHOce4l9pE&amp;feature=youtu.be">40423158 莊子慶結案口頭簡報</a></p>
-<hr/>
+<hr>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_wRHtEhC5MI">40623201 王君庭結案口頭簡報</a></span></p>
@@ -905,4 +909,4 @@ end
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
