--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -157,7 +157,11 @@ img {
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
-<p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
+<p><span>手足球系統的零組件尺寸分析 (可行性分析) (40623215)</span></p>
+<p><img caption="false" height="293" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E6%B4%9E.PNG" width="500"/></p>
+<p><span>傾斜球檯，最中間為最低點，球在進洞後會滾回中心點，成為一個自動回球機構。</span></p>
+<p><img alt="" height="277" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E7%B8%AB%E7%B7%9A.PNG" width="500"/></p>
+<p><span>連同球桿改動，路徑改為和傾斜後的球檯平行，故不會有因球檯傾斜而球員踢不到球的情形。</span></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
@@ -183,8 +187,7 @@ img {
 <p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
 <p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
-<p></p>
-<br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
+<p></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
         
     <!-- footer -->
       <div class="container">
