--- a/config/content.htm
+++ b/config/content.htm
@@ -737,6 +737,10 @@
 <p>雙人足球員模擬 (40623249)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
 <p><a href="https://github.com/mdecadp2018/site-40623220/blob/gh-pages/bg2.ttt">人對人 V-rep</a> (40623220)</p>
+<pre allowfullscreen"="" class="brush:html;auto-links:false;tool&lt;h2&gt;系統功能展示&lt;/h2&gt; &lt;h4&gt;&lt;strong&gt;BG1&lt;/strong&gt;&lt;/h4&gt; &lt;p&gt;手足球模擬系統功能展示 (模擬展示與說明影片)&lt;/p&gt; &lt;hr/&gt; &lt;h4&gt;&lt;strong&gt;BG2&lt;/strong&gt;&lt;/h4&gt; &lt;p&gt;手足球模擬系統功能展示 (模擬展示與說明影片)&lt;/p&gt; &lt;p&gt;單人足球員模擬 (40623249)&lt;/p&gt; &lt;p&gt;&lt;iframe allowfullscreen=" height="314" src="//www.youtube.com/embed/wEtOXdks_ds" width="560"></pre>
+<p>雙人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
+<p><a href="https://github.com/mdecadp2018/site-40623220/blob/gh-pages/bg2.ttt">人對人 V-rep</a> (40623220)</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">-- model in Solvespace 500 mm = 5000 mm in V-rep
 --[[
 Simulation is 10 times of realistic environment
@@ -883,7 +887,7 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對人(40423160)</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對電腦<span>(40423160)</span></yt-formatted-string></p>
@@ -894,7 +898,7 @@ end
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
 =======
 <p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">手足球人與人模擬(40623237)</a></p>
->>>>>>> scrum-1/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
@@ -978,12 +982,12 @@ end
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
 =======
 <p></p>
->>>>>>> scrum-1/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -1015,5 +1019,5 @@ end
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
-<p><span></span></p>
+<p><span><a href="https://github.com/mdecadp2018/site-40623201/blob/gh-pages/report/pdf/report.pdf" target="_blank">BG5專案結案報告</a></span></p>
 <p><span></span></p>
