--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -163,6 +163,10 @@ img {
 <p>雙人足球員模擬 (40623249)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
 <p><a href="https://github.com/mdecadp2018/site-40623220/blob/gh-pages/bg2.ttt">人對人 V-rep</a> (40623220)</p>
+<pre allowfullscreen"="" class="brush:html;auto-links:false;tool&lt;h2&gt;系統功能展示&lt;/h2&gt; &lt;h4&gt;&lt;strong&gt;BG1&lt;/strong&gt;&lt;/h4&gt; &lt;p&gt;手足球模擬系統功能展示 (模擬展示與說明影片)&lt;/p&gt; &lt;hr/&gt; &lt;h4&gt;&lt;strong&gt;BG2&lt;/strong&gt;&lt;/h4&gt; &lt;p&gt;手足球模擬系統功能展示 (模擬展示與說明影片)&lt;/p&gt; &lt;p&gt;單人足球員模擬 (40623249)&lt;/p&gt; &lt;p&gt;&lt;iframe allowfullscreen=" height="314" src="//www.youtube.com/embed/wEtOXdks_ds" width="560"></pre>
+<p>雙人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
+<p><a href="https://github.com/mdecadp2018/site-40623220/blob/gh-pages/bg2.ttt">人對人 V-rep</a> (40623220)</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">-- model in Solvespace 500 mm = 5000 mm in V-rep
 --[[
 Simulation is 10 times of realistic environment
@@ -309,7 +313,7 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對人(40423160)</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對電腦<span>(40423160)</span></yt-formatted-string></p>
@@ -320,7 +324,7 @@ end
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
 =======
 <p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">手足球人與人模擬(40623237)</a></p>
->>>>>>> scrum-1/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
