--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -30,6 +30,10 @@
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>專案成果摘要</p>
+<p>本次專案成果其分為三種:<a href="https://www.youtube.com/watch?time_continue=53&amp;v=aAG0wYawJ-I">人v.s人</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=178&amp;v=MxwbTm1Q78Q">人v.s電腦</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=75&amp;v=Uv_SfE0ZHog">電腦v.s電腦</a></p>
+<p>其成果是三種都有做出來，其中三種的差異主要是在程式定義上的問題，人v.s人是參考老師的版本下去做更改，在做人v.s電腦與電腦v.s電腦的過程中，需先將電腦的部分做出來，之後再與人的程式做個整合與優化的動作，其實可以一次寫完整個程式，但由於非資訊類科系，故在程式上土法煉鋼，將每一部份完成後再進行統合，雖花費時間較多，但也成功做出成果。</p>
+<p>完成此次的專案須具備基本對V-rep的認識、OnShape熟悉的操作，以及和全班協同過程中能夠有除錯的能力。在程式撰寫方面，因非資訊類別科系，故在撰寫程式上需不斷的嘗試，了解其邏輯架構，才能完成；Onshape 設計中，因負責組員對其軟體有相當程度的技能，故在繪製設計圖上十分上手；而在全班協同中每個人都必須擁有除錯的能力，但由於是第一次與全班共同協同，所以在執行的過程中會有各種錯誤出現，都必須藉由討論來解決問題。</p>
+<p><span>在執行專案過程中因對程式不熟悉，故需不斷地找出錯誤，才能做出三種成果，而如何找出錯誤以及如何解決，詳見專案討論的部分。</span></p>
 <p>專案執行動機</p>
 <p><span>近年來科技發展，程式設計與系統模擬早以統合成一塊。本學期的手足球模擬，跳脫以往人</span><span lang="EN-US">v.s.</span><span>人的競賽方式，以及人</span><span lang="EN-US">v.s.</span><span>電腦，我們也想做出電腦</span><span lang="EN-US">v.s.</span><span>電腦的系統模擬，其動機為前陣子</span><span lang="EN-US">Alpha go<span> </span></span><span>擊敗不少各國高手，這讓我們想驗證電腦與電腦是否能力相當，又會如何運作；而中間使用的運算法並沒有</span><span lang="EN-US">Alpha go<span> </span></span><span>這麼複雜，但在機構設計以及運動模擬中佔了很大一部分，而我們認為電腦</span><span lang="EN-US">v.s.</span><span>電腦的程式雖可以設計，但中間是否參雜些運氣成分還有待關注。</span></p>
 <p>相關文獻探討</p>
@@ -173,6 +177,7 @@
 </table>
 <p>專案執行過程規劃</p>
 <p>專案執行內容</p>
+<p><span>延續上半學期的手足球機台，從一開始執行規劃、送球機構的初步設計並使用Onshape繪圖，到最後能用v-rep寫程式做模擬，期間發生了許多問題及困難，例如:送球機構無法順利將球送到指定位置，因為送球機構更改球台的設計導致球員無法順利踢到足球......等(</span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">相關連結</a><span>)，都是經過一在地更改才完成了現在的送球機構；在寫程式時，程式碼的定義出現了問題，導致無法順利模擬，但最後也順利解決，得到現在的成果。而這次較特別的是全班一起維護的</span><a href="https://github.com/40623202/cd2019b">期末倉儲</a><span>，本專案的協同工作也是一大重點，透過Github倉儲，讓成員可以同時提交工作，當然，過程中也是遇到很多麻煩，第一次全班一起維護一個倉儲，但經過幾次嘗試之後，也順利的提交pull request，讓期末倉儲得以順利更新。</span></p>
 <p>專案結論</p>
 <hr/>
 <h4><strong>BG3</strong></h4>
@@ -637,23 +642,23 @@
 <p><span><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">V-rep手足球系統模擬</a><span> </span>(球進門框，球從送球機構完整跑一次，請從<a href="https://youtu.be/I19GK0fYO_E?t=108">1:48</a>開始看起)40423160</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></span></p>
 <p><a href="https://cad.onshape.com/documents/fbeb414ada417e232226c3c7/w/7be3a9c80f3c0c3d6aaa0804/e/8652356f49c2624b472f9a23">另外版本的送球機構(40623231)</a></p>
-<hr/>
+<hr>
 <h4><strong>BG4</strong></h4>
 <p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">其他版本的連結</a></p>
 <p><strong>送球機構的初步構想:</strong></p>
 <p><span>(送球機構的初步構想Final version - 40623224):</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/Xi4Qw-XutsM" width="500"></iframe></span></p>
-<hr/>
+<hr>
 <p></p>
 <p><strong>送球機構設計與模擬:</strong></p>
 <p><span>第一版</span><span>送球機構設計(有縫隙)(40623224):</span></p>
 <p><img alt="" height="427" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%B8%80%E7%89%88(%E6%9C%89%E7%B8%AB%E9%9A%99).png" width="700"/></p>
-<hr/>
+<hr>
 <p>第一版<span>送球機構模擬(有縫隙)(40623227):</span></p>
 <p><span>下載連結:<a href="https://drive.google.com/file/d/1ZqOR4frJV_1PaNx3LzDMz2EdC5-xdwM6/view?usp=sharing">送球機構第一版</a></span></p>
 <p><span>因有縫隙關係導致無法進入</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WyBS_Sy7NUA" width="500"></iframe></span><span></span></p>
-<hr/>
+<hr>
 <p><span>第二版</span><span>送球機構設計(有圓盤)(40623224):</span></p>
 <p>第二版更改的內容有把滾道的縫隙填滿，並且再螺旋桿內下方增加一圓盤。</p>
 <p><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%BA%8C%E7%89%88(%E6%9C%89%E5%9C%93%E7%9B%A4).png" width="700"/></p>
@@ -988,11 +993,15 @@ end
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/reveal/index.html#/">Group Reveal</a></p>
 <p><a href="https://youtu.be/k_-C0r0zLyg">40623212 魏有泉結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lZbo9ncpHJE">40623221 蔡和勳結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=29aceP-3OrM">40623222 蔡博淮結案口頭簡報</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623233/reveal/index.html#/">40623233 謝宗宏結案口頭簡報</a></span></p>
+<p><a href="https://www.youtube.com/watch?v=Wfbf2eF_vcE">40623240 何冠均結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
+<p><a href="https://studio.youtube.com/video/bW3vqJRxjdw/edit">40623202 吳姍蓉結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
@@ -1032,18 +1041,18 @@ end
 <p></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr/>
+<hr>
 <h4><strong>BG2</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr/>
+<hr>
 <h4><strong>BG3</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
 <p><a href="https://mdecadp2018.github.io/site-40623241/downloads/report.pdf" target="_blank">BG3專案結案報告</a></p>
-<hr/>
+<hr>
 <h4><strong>BG4</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr/>
+<hr>
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr></hr></hr></hr></hr>
