--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -163,9 +163,11 @@ img {
 <p><a href="https://www.youtube.com/watch?v=Wfbf2eF_vcE">40623240 何冠均結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
+<p><a href="https://studio.youtube.com/video/bW3vqJRxjdw/edit">40623202 吳姍蓉結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=t4nE2Y6S6nA">40623247 廖峻祥結案口頭報告</a></p>
 <p><a href="https://www.youtube.com/watch?v=z7thbG8H-AY">40623249李秉樺 結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=N_WTdohJgS8&amp;t=132s">40623250湯峻傑結案口頭簡報</a></p>
 <hr/>
