--- a/content/手足球系統模擬.html
+++ b/content/手足球系統模擬.html
@@ -165,6 +165,10 @@ img {
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>專案成果摘要</p>
+<p>本次專案成果其分為三種:<a href="https://www.youtube.com/watch?time_continue=53&amp;v=aAG0wYawJ-I">人v.s人</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=178&amp;v=MxwbTm1Q78Q">人v.s電腦</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=75&amp;v=Uv_SfE0ZHog">電腦v.s電腦</a></p>
+<p>其成果是三種都有做出來，其中三種的差異主要是在程式定義上的問題，人v.s人是參考老師的版本下去做更改，在做人v.s電腦與電腦v.s電腦的過程中，需先將電腦的部分做出來，之後再與人的程式做個整合與優化的動作，其實可以一次寫完整個程式，但由於非資訊類科系，故在程式上土法煉鋼，將每一部份完成後再進行統合，雖花費時間較多，但也成功做出成果。</p>
+<p>完成此次的專案須具備基本對V-rep的認識、OnShape熟悉的操作，以及和全班協同過程中能夠有除錯的能力。在程式撰寫方面，因非資訊類別科系，故在撰寫程式上需不斷的嘗試，了解其邏輯架構，才能完成；Onshape 設計中，因負責組員對其軟體有相當程度的技能，故在繪製設計圖上十分上手；而在全班協同中每個人都必須擁有除錯的能力，但由於是第一次與全班共同協同，所以在執行的過程中會有各種錯誤出現，都必須藉由討論來解決問題。</p>
+<p><span>在執行專案過程中因對程式不熟悉，故需不斷地找出錯誤，才能做出三種成果，而如何找出錯誤以及如何解決，詳見專案討論的部分。</span></p>
 <p>專案執行動機</p>
 <p><span>近年來科技發展，程式設計與系統模擬早以統合成一塊。本學期的手足球模擬，跳脫以往人</span><span lang="EN-US">v.s.</span><span>人的競賽方式，以及人</span><span lang="EN-US">v.s.</span><span>電腦，我們也想做出電腦</span><span lang="EN-US">v.s.</span><span>電腦的系統模擬，其動機為前陣子</span><span lang="EN-US">Alpha go<span> </span></span><span>擊敗不少各國高手，這讓我們想驗證電腦與電腦是否能力相當，又會如何運作；而中間使用的運算法並沒有</span><span lang="EN-US">Alpha go<span> </span></span><span>這麼複雜，但在機構設計以及運動模擬中佔了很大一部分，而我們認為電腦</span><span lang="EN-US">v.s.</span><span>電腦的程式雖可以設計，但中間是否參雜些運氣成分還有待關注。</span></p>
 <p>相關文獻探討</p>
@@ -308,6 +312,7 @@ img {
 </table>
 <p>專案執行過程規劃</p>
 <p>專案執行內容</p>
+<p><span>延續上半學期的手足球機台，從一開始執行規劃、送球機構的初步設計並使用Onshape繪圖，到最後能用v-rep寫程式做模擬，期間發生了許多問題及困難，例如:送球機構無法順利將球送到指定位置，因為送球機構更改球台的設計導致球員無法順利踢到足球......等(</span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">相關連結</a><span>)，都是經過一在地更改才完成了現在的送球機構；在寫程式時，程式碼的定義出現了問題，導致無法順利模擬，但最後也順利解決，得到現在的成果。而這次較特別的是全班一起維護的</span><a href="https://github.com/40623202/cd2019b">期末倉儲</a><span>，本專案的協同工作也是一大重點，透過Github倉儲，讓成員可以同時提交工作，當然，過程中也是遇到很多麻煩，第一次全班一起維護一個倉儲，但經過幾次嘗試之後，也順利的提交pull request，讓期末倉儲得以順利更新。</span></p>
 <p>專案結論</p>
 <hr/>
 <h4><strong>BG3</strong></h4>
