--- a/config/content.htm
+++ b/config/content.htm
@@ -264,13 +264,87 @@
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>專案成果摘要</p>
+<p>手足球早在20世紀存在，由一位英國倫敦的哈羅德所發明，規則源自於足球，是一種可以類似火柴盒的桌上型運動。我們利用Vrep建立手足球系統，當射門得分時，會由底部的抬球機構把球送回場中央，而人偶透過程式控制方式可以約束移動或成為人機對打電腦方自動控制，最後在設定球的碰撞係數。</p>
 <p>專案執行動機</p>
+<p><strong></strong>手足球是一個適合在家中遊玩的大型遊戲器材，通常由兩人面對面互相操控人偶上的桿子。一開始對足球非常排斥，因為它相當消耗體力，但接觸手足球後發先它能滿足一些體力不足卻想體驗踢足球的人。剛開始接觸手足球時，由於不一定會有人有空陪你玩 ，因此嘗試設計人機對打並透過這樣的方式了解手足球如何在vrep以機器人的形式設計出來。</p>
 <p>相關文獻探討</p>
+<p><a href="https://zh.wikipedia.org/wiki/%E6%A1%8C%E4%B8%8A%E8%B6%B3%E7%90%83">維基百科-足球機</a><br/><a href="http://www.foosball.tw/menu_content/about_foos/About-Foos-History.html">台灣手足球協會</a><br/><a href="https://patentimages.storage.googleapis.com/dd/fd/fd/58d26ff6b4a35a/US20120205865A1.pdf">PDF</a></p>
 <p>專案執行成員</p>
+<table border="3" style="width: 531px;"><caption></caption>
+<tbody>
+<tr>
+<td style="width: 137px;"><strong>Leader</strong></td>
+<td style="width: 392px;"><strong>Assignments</strong></td>
+</tr>
+<tr>
+<td style="width: 137px;">鐘偉哲<span> </span><a href="https://40623224.github.io/40623224-Personal-Website/content/Introduction.html">40623224</a></td>
+<td style="width: 392px;">設計與繪圖、送球機構設計與模擬、專案報告書、監督組員進度</td>
+</tr>
+</tbody>
+</table>
+<table border="3">
+<tbody>
+<tr>
+<td><strong>Member</strong></td>
+<td><strong>Assignments</strong></td>
+</tr>
+<tr>
+<td>翁嘉宏<span> </span><a href="https://mdecadp2018.github.io/site-40623210/content/index.html">40623210</a></td>
+<td>專案口頭簡報Reveal、V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>卓昆鋒<span> </span><a href="https://mdecadp2018.github.io/site-40623225/content/index.html">40623225</a></td>
+<td>V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>鄭清銓<span> </span><a href="https://github.com/mdecadp2018/site-40623226">40623226</a></td>
+<td>執行規劃、V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>張耀元<a href="https://mdecadp2018.github.io/site-40623227/content/index.html"> 40623227</a></td>
+<td>V-rep 動態模擬 &lt;1&gt;人人對打 &lt;2&gt;機機對打 &lt;3&gt;人機對打</td>
+</tr>
+<tr>
+<td>洪一木 40623234</td>
+<td>執行規劃</td>
+</tr>
+<tr>
+<td>許筌翔<span> </span><a href="https://mdecadp2018.github.io/site-40623238/content/index.html">40623238</a></td>
+<td>設計與繪圖</td>
+</tr>
+<tr>
+<td>許登貴<a href="https://mdecadp2018.github.io/site-40623239/content/index.html"> 40623239</a></td>
+<td>V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>莊子慶<span> </span><a href="https://40423158.github.io/2019cd/content/index.html">40423158</a></td>
+<td>專案口頭簡報Reveal、V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>郭金豪 40423232</td>
+<td>專案報告書(Pandoc、TinyTeX)</td>
+</tr>
+<tr>
+<td>陳憲棠 40423237</td>
+<td>專案報告書(Pandoc、TinyTeX)</td>
+</tr>
+</tbody>
+</table>
 <p>執行使用套件</p>
+<p>Onshape、Vrep、Github、CMSimfly</p>
 <p>專案執行過程規劃</p>
+<p>每個人分配各自工作，透過協同方式每個人依照每周進度提交並以Github媒介作協同</p>
 <p>專案執行內容</p>
+<p><span>透過Onshape繪製出手足球本體及人偶尺寸，利用Vrep編寫程式碼操控人偶，透過每週上傳Github進行進度協同，最後以CMSimfly網站上呈現出來</span></p>
 <p>專案結論</p>
+<p><a href="https://drive.google.com/file/d/1_Hk3IbIg1_vGYoDoedjd3eVrQ4iWQK_m/view">下載連結</a></p>
+<p>由於目前對於設計方面還不熟悉，因此設計過程大部分都是參考網站上再改變尺寸和程式碼，基礎部分還需多多加強，而球到最後會停止不動，這部分用斜面來改善。</p>
+<p>人機對人機</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="280" src="https://www.youtube.com/embed/J5nIZNrk1mI" width="500"></iframe></p>
+<p>人對人機</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="314" src="https://www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
+<p>人對人</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="341" src="https://www.youtube.com/embed/ltAH5UlB6ds" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>專案成果摘要</p>
