--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -642,23 +642,23 @@
 <p><span><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">V-rep手足球系統模擬</a><span> </span>(球進門框，球從送球機構完整跑一次，請從<a href="https://youtu.be/I19GK0fYO_E?t=108">1:48</a>開始看起)40423160</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></span></p>
 <p><a href="https://cad.onshape.com/documents/fbeb414ada417e232226c3c7/w/7be3a9c80f3c0c3d6aaa0804/e/8652356f49c2624b472f9a23">另外版本的送球機構(40623231)</a></p>
-<hr>
+<hr/>
 <h4><strong>BG4</strong></h4>
 <p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">其他版本的連結</a></p>
 <p><strong>送球機構的初步構想:</strong></p>
 <p><span>(送球機構的初步構想Final version - 40623224):</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/Xi4Qw-XutsM" width="500"></iframe></span></p>
-<hr>
+<hr/>
 <p></p>
 <p><strong>送球機構設計與模擬:</strong></p>
 <p><span>第一版</span><span>送球機構設計(有縫隙)(40623224):</span></p>
 <p><img alt="" height="427" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%B8%80%E7%89%88(%E6%9C%89%E7%B8%AB%E9%9A%99).png" width="700"/></p>
-<hr>
+<hr/>
 <p>第一版<span>送球機構模擬(有縫隙)(40623227):</span></p>
 <p><span>下載連結:<a href="https://drive.google.com/file/d/1ZqOR4frJV_1PaNx3LzDMz2EdC5-xdwM6/view?usp=sharing">送球機構第一版</a></span></p>
 <p><span>因有縫隙關係導致無法進入</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WyBS_Sy7NUA" width="500"></iframe></span><span></span></p>
-<hr>
+<hr/>
 <p><span>第二版</span><span>送球機構設計(有圓盤)(40623224):</span></p>
 <p>第二版更改的內容有把滾道的縫隙填滿，並且再螺旋桿內下方增加一圓盤。</p>
 <p><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%BA%8C%E7%89%88(%E6%9C%89%E5%9C%93%E7%9B%A4).png" width="700"/></p>
@@ -1005,6 +1005,7 @@ end
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=t4nE2Y6S6nA">40623247 廖峻祥結案口頭報告</a></p>
 <p><a href="https://www.youtube.com/watch?v=z7thbG8H-AY">40623249李秉樺 結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=N_WTdohJgS8&amp;t=132s">40623250湯峻傑結案口頭簡報</a></p>
 <hr/>
@@ -1041,18 +1042,18 @@ end
 <p></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr>
+<hr/>
 <h4><strong>BG2</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr>
+<hr/>
 <h4><strong>BG3</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
 <p><a href="https://mdecadp2018.github.io/site-40623241/downloads/report.pdf" target="_blank">BG3專案結案報告</a></p>
-<hr>
+<hr/>
 <h4><strong>BG4</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr>
+<hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p></hr></hr></hr></hr></hr></hr></hr></hr>
+<p><span></span></p>
